--- a/CURSO TYPESCRIPT/index.html
+++ b/CURSO TYPESCRIPT/index.html
@@ -7,6 +7,7 @@
     <title>Dio</title>
 </head>
 <body>
+    <input id="input" type="text" placeholder="Digite os dados">
     <script src="./index.ts"></script>
 </body>
 </html>
