tag header adicionada

--- a/CURSO DIO/BootCamps/TQI Fullstack Developer/menu-hambuerguer/index.html
+++ b/CURSO DIO/BootCamps/TQI Fullstack Developer/menu-hambuerguer/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="header-wrapper">
+
+    </header>
     <footer class="footer">
         Feito por Eric Clepton
     </footer>
