Projeto Portifolho  finalizado

--- a/CURSO DIO/BootCamps/TQI Fullstack Developer/menu-hambuerguer/index.html
+++ b/CURSO DIO/BootCamps/TQI Fullstack Developer/menu-hambuerguer/index.html
@@ -1,19 +1,113 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
- 
+
     <title>Document</title>
 </head>
+
 <body>
     <header class="header-wrapper">
-        <div class="header"></div>
+        <div class="header">
+            <div class="checkbox-container">
+                <div class="checkbox-wrapper">
+                    <input type="checkbox" id="toggle">
+                    <label class="checkbox" for="toggle">
+                        <div class="trace"></div>
+                        <div class="trace"></div>
+                        <div class="trace"></div>
+                    </label>
+                    <div class="menu"></div>
+                    <nav class="menu-items">
+                        <ul>
+                            <li>
+                                <a href="#" class="menu-items-hove">Home</a>
+                            </li>
+                            <li>
+                                <a href="#" class="menu-items-hove">Sobre</a>
+                            </li>
+                            <li>
+                                <a href="#" class="menu-items-hove">Projetos</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="container-profile">
+                <img  class="logo-developer" src="./assets/undraw_developer_activity_re_39tg.svg" width="150" height="150"
+                    alt="Image do Site Undraw, ilustra uma programador na sua atividade ">
+                <div class="container-text">
+                    <h1>Eric Clepton</h1>
+                    <h2>Full-Stack Developer</h2>
+                    <div class="social-media social-media-row">
+                        <a class="link-social-media" href="https://github.com/ericcleptonsilva" target="_blank">
+                            <img class="icon-social-media" src="./assets/GitHub-Mark-Light-120px-plus.png" width="25" height="25"  alt="Icon do site GitHub com o link do perfil ">
+                            <p class="text-github-linkedin">
+                                GitHub
+                            </p>
+                        </a>
+                        <a class="link-social-media" href="https://www.linkedin.com/in/ericclepton/" target="_blank" >
+                            <img class="icon-social-media" src="./assets/In.png" width="25" height="25"  alt="Icon do site linkedin com o link do perfil ">
+                            <p class="text-github-linkedin">
+                                LinkedIn
+                            </p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
     </header>
+    <div class="container">
+        <div class="card-container">
+            <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+            </div>
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2 class="text-card">Github</h2>
+                    <p>Veja meus projetos!</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="card-container">
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2 class="text-card">Linkedin</h2>
+                    <p>Vem ver minha carreira profissional!</p>
+                </div>
+            </div>
+            <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+            </div>
+        </div>
+        
+        <div class="card-container">
+            <div class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis distinctio nihil, culpa repudiandae atque facilis eveniet neque
+             consequuntur quas dolorem aliquam maiores nulla ullam optio fugit voluptatibus soluta? Nulla, ipsum.
+            </div>
+            <div class="card">
+                <div class="card-wrapper">
+                    <h2 class="text-card">Instagram</h2>
+                    <p>Ou mais do meu dia-a-dia ;)</p>
+                </div>
+            </div>
+        </div>
+    </div>
     <footer class="footer">
         Feito por Eric Clepton
     </footer>
 </body>
+
 </html>
